feat: add get by id api
